# napari-animated-gif-io

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
src/napari_animated_gif_io/: __init__.py  _function.py  _writer.py
src/napari_animated_gif_io/_tests/: test_function.py  test_writer.py
